--- a/docs/main.css
+++ b/docs/main.css
@@ -1,66 +1,84 @@
-html body {
-  background-color: #000000;
-  color: #AAAAAA;
-  font-family: "Roboto Mono", Courier, monospace;
-  overflow-x: hidden;
-  font-weight: 100;
-  font-size: 16px;
+@font-face {
+  font-family: quicksand;
+  src: url(font/Quicksand-Light.ttf);
 }
 
-a {
-  color: #FF6666;
+body, html {
+  height: 100%;
+  font-size:2.7vmin;
+  font-family: quicksand;
+  font-weight: lighter;
+  color: #595977;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-  color: #666666;
-  font-weight: 100;
-  font-size: 30px;
+  font-size:5vmin;
+  margin:0;
+  text-align: center;
+  font-weight: lighter;
+  color: #595977;
+  text-decoration: underline;
 }
 
 h2 {
-  color: #FFFFFF;
-  font-weight: 100;
+  font-weight: lighter;
+  color: #595977;
 }
 
-header {
-  text-align: center;
-  margin: 100px;
+a {
+  color: #000;
+}
+
+section { 
+  /* Full height */
+  height: 95%; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: relative;
+}
+
+section div {
+  width:80vmin;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: rgba(255,255,255,0.95);
+  position: absolute;
+}
+
+section div.center {
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+section div.left {
+  top: 50%;
+  left: 5%;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
+
+section div.right {
+  top: 50%;
+  right: 5%;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
 footer {
+  background: #000;
+  padding: 1vmin;
   text-align: center;
-  padding: 100px;
 }
 
-.container {
-  margin: auto;
-  max-width: 1500px;
-}
-
-.container:after {
-  content:"";
-  display:table;
-  clear:both
-}
-
-.main {
-  float: left;
-  width: 66.66666%;
-}
-
-.side {
-  float: left;
-  width: 33.33333%;
-}
-
-@media only screen and (max-width: 1000px) {
-  .main, .side {
-    width: 100%;
-  }
-}
-
-.content {
-  margin: 10px;
-  padding: 10px;
-  background-color: #00000066
+footer a {
+  color: #fff;
 }
